Added broken-down points system